--- a/FR/index.html
+++ b/FR/index.html
@@ -49,61 +49,53 @@
                          
                             <div id="ecran-1" class="carrousel_ecran">
                                 <figure>
-                                    <img src="/public/img/the-goose-berthe-morisot.webp" alt="l'oie">
-                                    <figcaption> <a>L'oie - Berthe Morisot <</a></figcaption>
+                                    <img src="/public/img/in-a-japanese-garden-1901-lila-cabot-perry.webp" alt="in-a-japanese-garden-1901-lila-cabot-perry">
+                                    <figcaption> <a href="#" class="carrousel__links--artiste"> Dans un jardin japonais - Lila Cabot Perry <</a></figcaption>
                                 </figure>
                             </div>
                             <div id="ecran-2" class="carrousel_ecran">
                                 <figure>
-                                    <img src="/public/img/in-a-japanese-garden-1901.webp" alt="in-a-japanese-garden-1901">
-                                    <figcaption> <a href="#"> Dans un jardin japonais - Berthe Morisot </a> </figcaption>
+                                    <img src="/public/img/the-goose-berthe-morisot.webp" alt="the-goose-berthe-morisot">
+                                    <figcaption> <a href="#" class="carrousel__links--artiste"> L'oie - Berthe Morisot   </a> </figcaption>
                                 </figure>
                             </div>
                             <div id="ecran-3" class="carrousel_ecran">
                                 <figure>
                                     <img src="/public/img/dans-un-bateau-lila-cabot-perry-1907.webp" alt="dans-un-bateau-in-a-boat-1907">
-                                    <figcaption> Dans un bateau - Lila Cabot Perry </figcaption>
+                                    <figcaption> <a href="#" class="carrousel__links--artiste">Dans un bateau - Lila Cabot Perry </a> </figcaption>
                                 </figure>
                             </div>
                             <div id="ecran-4" class="carrousel_ecran">
                                 <figure>
                                     <img src="/public/img/houses-of-parliamen-claude-monet.webp" alt="houses-of-parliamen-claude-monet">
-                                    <figcaption> Le Parlement - Claude Monet</figcaption>
+                                    <figcaption> <a href="#" class="carrousel__links--artiste"> Le Parlement - Claude Monet </a> </figcaption>
                                 </figure>
                             </div>
                             <div id="ecran-5" class="carrousel_ecran">
                                 <figure>
                                     <img src="/public/img/pont-japonais-monet.webp" alt="pont-japonais-monet">
-                                    <figcaption>  Le pont japonais Claude Monet</figcaption>
+                                    <figcaption>  <a href="#" class="carrousel__links--artiste">Le pont japonais Claude Monet </a></figcaption>
                                 </figure>
                             </div>
                             <div id="ecran-6" class="carrousel_ecran">
                                 <figure>
                                     <img src="/public/img/the-port-of-nice-berthe-morisot.webp" alt="the-port-of-nice-berthe-morisot">
-                                    <figcaption>  Le port de Nice - Berthe Morisot </figcaption>
+                                    <figcaption><a href="#" class="carrousel__links--artiste"> Le port de Nice - Berthe Morisot </a> </figcaption>
                                 </figure>
                             </div>
                             <div id="ecran-7" class="carrousel_ecran">
                                 <figure>
                                     <img src="/public/img/deauville-the-harbor-1897-eugene-boudin.webp" alt="Deauville">
-                                    <figcaption>  Le port de Deauville- Eugène Boudin </figcaption>
+                                    <figcaption> <a href="#" class="carrousel__links--artiste"> Le port de Deauville- Eugène Boudin </a> </figcaption>
                                 </figure>
                             </div>
                             <div id="ecran-8" class="carrousel_ecran">
                                 <figure>
                                     <img src="/public/img/trouville-black-rocks-eugene-boudin.webp" alt="trouville-black-rocks-eugene-boudin">
-                                    <figcaption>  Les rochers noirs de Trouville </figcaption>
+                                    <figcaption> <a href="#" class="carrousel__links--artiste"> Les rochers noirs de Trouville - Eugène Boudin</a> </figcaption>
                                 </figure>
                             </div>
                         </div>
-                
-                        <ul class="caroussel_liste-liens">
-                            <li><a href="#ecran-1" :class="{actif:hrefCourant==='#ecran-1'}">ecran 1</a></li>
-                            <li><a href="#ecran-2" :class="{actif:hrefCourant==='#ecran-2'}">ecran 2</a></li>
-                            <li><a href="#ecran-3" :class="{actif:hrefCourant==='#ecran-3'}">ecran 3</a></li>
-                            <li><a href="#ecran-4" :class="{actif:hrefCourant==='#ecran-4'}">ecran 4</a></li>
-                            <li><a href="#ecran-5" :class="{actif:hrefCourant==='#ecran-5'}">ecran 5</a></li>
-                        </ul>
                     </div> 
 
                  <h3> Retrouvez ces oeuvres dans notre exposition “Couleurs de l’impressionisme”du 13 avril au 23 juin 2021</h3>
