--- a/FR/eugene-boudin.html
+++ b/FR/eugene-boudin.html
@@ -21,19 +21,19 @@
             </div>
             <nav id="mainNav" x-show="menuIs0pen" x-transition.duration.500ms class="menu">  
 
-              <h4 class="menu__title">Les artistes et leurs oeuvres </h4>
-              <div class="menu__title--separation"></div>
-                <ul class="menu__liste">
-                    <li class="menu__liste--artistes"><a href="/FR/eugene-boudin.html"> Eugène Boudin </a> </li> 
-                    <li class="menu__liste--artistes"> <a href="/FR/claude-monet.html"> Claude Monet</a> </li>
-                    <li class="menu__liste--artistes"><a href="/FR/berthe-morisot.html"> Berthe Morisot</a> </li>
-                    <li class="menu__liste--artistes"><a href="/FR/lila-cabot-parry.html"> Lila Cabot Parry </a></li>
-               </ul> 
-               <div class="menu__title--separation"></div>
-               <h4 class="menu__title"> <a href="/FR/info-impressionisme.html"> Qu’est que l’impressionisme ? </a> </h4>
-               <h4 class="menu__title"> <a href="#"> Billeterie </a> </h4>
-               <h4 class="menu__title"> <a href="/FR/contact.html"> Contact </a> </h4>
-           </nav>  
+                <h4 class="menu__title">Les artistes et leurs oeuvres </h4>
+                <div class="menu__title--separation"></div>
+                  <ul class="menu__liste">
+                      <li class="menu__liste--artistes"><a href="/FR/eugene-boudin.html" class="menu__artiste--link"> Eugène Boudin </a> </li> 
+                      <li class="menu__liste--artistes"> <a href="/FR/claude-monet.html" class="menu__artiste--link"> Claude Monet</a> </li>
+                      <li class="menu__liste--artistes"><a href="/FR/berthe-morisot.html" class="menu__artiste--link"> Berthe Morisot</a> </li>
+                      <li class="menu__liste--artistes"><a href="/FR/lila-cabot-parry.html" class="menu__artiste--link"> Lila Cabot Parry </a></li>
+                 </ul> 
+                 <div class="menu__title--separation"></div>
+                 <h4 class="menu__title"> <a href="/FR/info-impressionisme.html" class="menu__info--link"> Qu’est que l’impressionisme ? </a> </h4>
+                 <h4 class="menu__title"> <a href="#" class="menu__info--link"> Billeterie </a> </h4>
+                 <h4 class="menu__title"> <a href="/FR/contact.html" class="menu__info--link"> Contact </a> </h4>
+             </nav>  
         </header>   
       <div class="body__content" x-data="{ galerieimage:null,}">>
           <div class="body__heading"> 
@@ -43,7 +43,7 @@
                 <div class="body__lign--blueleft"></div>
          </div>
                     <figure>
-                        <img @click="galerieimage=''"src="/public/img/eugene-boudin.webp" alt="eugene-boudin" class="body__img--artistes"> > 
+                        <img src="/public/img/eugene-boudin.webp" alt="eugene-boudin" class="body__img--artistes"> > 
                         <figcaption> Le peintre </figcaption>
                     </figure>
                     <div class="body__lign--greenright"></div>
