ajout page artiste anglais

--- a/FR/lila-cabot-parry.html
+++ b/FR/lila-cabot-parry.html
@@ -35,7 +35,7 @@
                  <h4 class="menu__title"> <a href="/FR/contact.html" class="menu__info--link"> Contact </a> </h4>
              </nav>  
         </header>   
-      <div class="body__content" x-data="{ galerieimage:null,}">>
+      <div class="body__content" x-data="{ galerieimage:null,}">
           <div class="body__heading"> 
                 <h1> Artistes impressionismes</h1> 
                     <div class="body__lign--brownright"></div>
