--- a/FR/eugene-boudin.html
+++ b/FR/eugene-boudin.html
@@ -43,7 +43,7 @@
                 <div class="body__lign--blueleft"></div>
          </div>
                     <figure>
-                        <img src="/public/img/eugene-boudin.webp" alt="eugene-boudin" class="body__img--artistes"> > 
+                        <img src="/public/img/eugene-boudin.webp" alt="eugene-boudin" class="body__img--artistes"> 
                         <figcaption> Le peintre </figcaption>
                     </figure>
                     <div class="body__lign--greenright"></div>
