--- a/EN/lila-cabot-parry.html
+++ b/EN/lila-cabot-parry.html
@@ -24,7 +24,7 @@
                 <h4 class="menu__title">Les artistes et leurs oeuvres </h4>
                 <div class="menu__title--separation"></div>
                   <ul class="menu__liste">
-                      <li class="menu__liste--artistes"><a href="/FR/eugene-boudin.html" class="menu__artiste--link"> Eugène Boudin </a> </li> 
+                      <li class="menu__liste--artistes"><a href="/EN/eugene-boudin.html" class="menu__artiste--link"> Eugène Boudin </a> </li> 
                       <li class="menu__liste--artistes"> <a href="/FR/claude-monet.html" class="menu__artiste--link"> Claude Monet</a> </li>
                       <li class="menu__liste--artistes"><a href="/FR/berthe-morisot.html" class="menu__artiste--link"> Berthe Morisot</a> </li>
                       <li class="menu__liste--artistes"><a href="/FR/lila-cabot-parry.html" class="menu__artiste--link"> Lila Cabot Parry </a></li>
