croection page artistes

--- a/FR/berthe-morisot.html
+++ b/FR/berthe-morisot.html
@@ -35,7 +35,7 @@
                  <h4 class="menu__title"> <a href="/FR/contact.html" class="menu__info--link"> Contact </a> </h4>
              </nav>  
         </header>   
-      <div class="body__content" x-data="{ galerieimage:null,}">
+      <div class="body__content">
           <div class="body__heading"> 
                 <h1> Artistes impressionismes</h1> 
                     <div class="body__lign--brownright"></div>
@@ -43,10 +43,10 @@
                 <div class="body__lign--blueleft"></div>
          </div>
                     <figure>
-                        <img src="/public/img/berthe-morisot.webp" alt="berthe-morisot" class="body__img--artistes"> > 
+                        <img src="/public/img/berthe-morisot.webp" alt="berthe-morisot" class="body__img--artistes"> 
                         <figcaption> La peintre </figcaption>
                     </figure>
-                    <div class="body__lign--greenright"></div>
+                    <div class="body__lign--greenleft"></div>
                 <div class="body__content--text">
                         <p>
                             Berthe Marie Pauline Morisot, née le 14 janvier 1841 à Bourges et morte le 2 mars 1895 à Paris, 
@@ -64,7 +64,7 @@
                                 <a href="#" class="body__btn"> En savoir plus</a>
                                 <img src="/public/img/the-port-of-nice-berthe-morisot.webp" alt="in-a-japanese-garden-1901-lila-cabot-perry">
                                 <a href="#" class="body__btn"> En savoir plus</a>
-                    <div class="body__lign--greenright" ></div>
+                    <div class="body__lign--blueleft"></div>
                 </div>
      </div>
      </body>
