--- a/FR/lila-cabot-parry.html
+++ b/FR/lila-cabot-parry.html
@@ -35,15 +35,15 @@
                  <h4 class="menu__title"> <a href="/FR/contact.html" class="menu__info--link"> Contact </a> </h4>
              </nav>  
         </header>   
-      <div class="body__content" x-data="{ galerieimage:null,}">
+      <div class="body__content">
           <div class="body__heading"> 
                 <h1> Artistes impressionismes</h1> 
                     <div class="body__lign--brownright"></div>
-                    <h2> lila Cabot Perry </h2>
+                    <h2> Lila Cabot Perry </h2>
                 <div class="body__lign--blueleft"></div>
          </div>
                     <figure>
-                        <img src="/public/img/lila-cabot-perry-1892.webp" alt="lila-cabot-perry" class="body__img--artistes"> > 
+                        <img src="/public/img/lila-cabot-perry-1892.webp" alt="lila-cabot-perry" class="body__img--artistes"> 
                         <figcaption> La peintre </figcaption>
                     </figure>
                     <div class="body__lign--greenright"></div>
@@ -56,7 +56,7 @@
                              
                         <p> Autodidacte douée, elle entame à 36 ans, sur une suggestion de son beau-frère John La Farge, sa formation artistique</p>
                 </div>
-                    <div class="body__lign--brownright"></div>
+                    <div class="body__lign--brownleft"></div>
                             <h1>Ses oeuvres présentes dans l’exposition</h1>
                                 <img src="/public/img/dans-un-bateau-lila-cabot-perry-1907.webp" alt="dans-un-bateau-in-a-boat-1907">
                                 <a href="#" class="body__btn"> En savoir plus</a>
