--- a/FR/eugene-boudin.html
+++ b/FR/eugene-boudin.html
@@ -35,7 +35,7 @@
                  <h4 class="menu__title"> <a href="/FR/contact.html" class="menu__info--link"> Contact </a> </h4>
              </nav>  
         </header>   
-      <div class="body__content" x-data="{ galerieimage:null,}">>
+      <div class="body__content">
           <div class="body__heading"> 
                 <h1> Artistes impressionismes</h1> 
                     <div class="body__lign--brownright"></div>
@@ -55,13 +55,13 @@
                         <p> En 1844, Eugène Boudin fonde avec un associé sa propre boutique de papetier-encadreur où il expose les œuvres des artistes de passage.</p>      
                         <p>Il  fait sa première exposition en 1857 à Paris, et la même année il parvient à vendre une vingtaine de ses toiles à l'occasion d'une vente aux enchères au Havre. </p>
                 </div>
-                    <div class="body__lign--brownright"></div>
+                    <div class="body__lign--brownleft"></div>
                             <h1>Ses oeuvres présentes dans l’exposition</h1>
                                 <img src="/public/img/deauville-the-harbor-1897-eugene-boudin.webp" alt="Deauville le port">
                                 <a href="#" class="body__btn"> En savoir plus</a>
                                 <img src="/public/img/trouville-black-rocks-eugene-boudin.webp" alt="les rochers noirs">
                                 <a href="#" class="body__btn"> En savoir plus</a>
-                    <div class="body__lign--greenright" ></div>
+                    <div class="body__lign--blueleft" ></div>
                 </div>
      </div>
      </body>
