--- a/FR/index.html
+++ b/FR/index.html
@@ -50,13 +50,13 @@
                             <div id="ecran-1" class="carrousel_ecran">
                                 <figure>
                                     <img src="/public/img/in-a-japanese-garden-1901-lila-cabot-perry.webp" alt="in-a-japanese-garden-1901-lila-cabot-perry">
-                                    <figcaption> <a href="#" class="carrousel__links--artiste"> Dans un jardin japonais - Lila Cabot Perry <</a></figcaption>
+                                    <figcaption> <a href="#" class="carrousel__links--artiste"> Dans un jardin japonais - Lila Cabot Perry</a></figcaption>
                                 </figure>
                             </div>
                             <div id="ecran-2" class="carrousel_ecran">
                                 <figure>
                                     <img src="/public/img/the-goose-berthe-morisot.webp" alt="the-goose-berthe-morisot">
-                                    <figcaption> <a href="#" class="carrousel__links--artiste"> L'oie - Berthe Morisot   </a> </figcaption>
+                                    <figcaption> <a href="#" class="carrousel__links--artiste"> L'oie - Berthe Morisot </a> </figcaption>
                                 </figure>
                             </div>
                             <div id="ecran-3" class="carrousel_ecran">
