début css frise

--- a/FR/info-impressionisme.html
+++ b/FR/info-impressionisme.html
@@ -57,7 +57,17 @@
             <div class="body__lign--brownright"></div>
             <p>Pour en savoir plus sur les artistes,cliquez sur leur noms !</p>
             <div class="body__freize"> 
-             <div> 
+                <div class="freize__graphism"> 
+                    <div class="freize__line"> </div>
+                    <div class="freize__dot"> </div>
+                    <div class="freize__line"> </div>
+                    <div class=" freize__dot"> </div>
+                    <div class="freize__line"> </div>
+                    <div class="freize__dot"> </div>
+                    <div class="freize__line"> </div>
+                    <div class="freize__dot"> </div>
+                </div>
+             <div class="freize__card"> 
                     <figure>
                         <a> <img src="/public/img/eugene-boudin.webp" alt="eugène boudin"> </a>
                         <figcaption> <a href="/FR/eugene-boudin.html"> Eugène Boudin </a></figcaption>
