modif page oeuvre parlement

--- a/FR/oeuvres art/parlement.html
+++ b/FR/oeuvres art/parlement.html
@@ -34,7 +34,7 @@
                  <h4 class="menu__title"> <a href="#" class="menu__info--link"> Billeterie </a> </h4>
                  <h4 class="menu__title"> <a href="/FR/contact.html" class="menu__info--link"> Contact </a> </h4>
              </nav>  
-
+        </header>
              <figure>
                 <img src="/public/img/houses-of-parliamen-claude-monet.webp" alt="house parliament">
                 <figcaption> Le Parlement - 1904</figcaption>
@@ -44,7 +44,19 @@
                 Séries: <a href="https://www.wikiart.org/fr/claude-monet/all-works#!#filterName:Series_houses-of-parliament,resultType:masonry"> Houses of Parliament </a>
                 Genre: <a href="https://www.wikiart.org/fr/paintings-by-genre/paysage-urbain#!#filterName:all-works,viewType:masonry">paysage urbain</a>
              </p>
-        </header>
     </body>
-    
+    <nav>
+        <footer class="footer__fr">
+            <p class="footer__fr--address">Fondation Cartier, 261 Bd Raspail, 75014 Paris</p>
+            <p class="footer__fr--socials">Pour rester au courant de nos actualités, suivez-nous sur</p>
+            <div class="footer__fr--iconsocials"> 
+                 <a> <img src="/public/img/icons/youtube.svg" alt="logo youtube"> </a>
+                <a> <img src="/public/img/icons/instagram.svg" alt="logo instagram" class="footer__socials--instagram"> </a>
+            </div>
+            <div class="footer__fr--contact">
+                 <p> Pour nous contacter</p>
+                <a href="/FR/contact.html" class="footer__btn--contact"> Contact </a>
+             </div>
+     </footer>
+ </nav>
 </html>
