--- a/FR/eugene-boudin.html
+++ b/FR/eugene-boudin.html
@@ -57,10 +57,14 @@
                 </div>
                     <div class="body__lign--brownleft"></div>
                             <h1>Ses oeuvres présentes dans l’exposition</h1>
-                                <img src="/public/img/deauville-the-harbor-1897-eugene-boudin.webp" alt="Deauville le port">
-                                <a href="#" class="body__btn"> En savoir plus</a>
+                                <div class="text__btn"> 
+                                    <img src="/public/img/deauville-the-harbor-1897-eugene-boudin.webp" alt="Deauville le port">
+                                    <a href="#" class="body__btn"> En savoir plus</a>
+                                </div>
+                                <div class="text__btn"> 
                                 <img src="/public/img/trouville-black-rocks-eugene-boudin.webp" alt="les rochers noirs">
-                                <a href="#" class="body__btn"> En savoir plus</a>
+                                    <a href="#" class="body__btn"> En savoir plus</a>
+                                 </div>
                     <div class="body__lign--blueleft" ></div>
                 </div>
      </div>
