page oeuvre lien carrousel

--- a/FR/index.html
+++ b/FR/index.html
@@ -68,13 +68,13 @@
                             <div id="ecran-4" class="carrousel_ecran">
                                 <figure>
                                     <img src="/public/img/houses-of-parliamen-claude-monet.webp" alt="houses-of-parliamen-claude-monet">
-                                    <figcaption> <a href="#" class="carrousel__links--artiste"> Le Parlement - Claude Monet </a> </figcaption>
+                                    <figcaption> <a href="/FR/oeuvres art/parlement.html" class="carrousel__links--artiste"> Le Parlement - Claude Monet </a> </figcaption>
                                 </figure>
                             </div>
                             <div id="ecran-5" class="carrousel_ecran">
                                 <figure>
                                     <img src="/public/img/pont-japonais-monet.webp" alt="pont-japonais-monet">
-                                    <figcaption>  <a href="#" class="carrousel__links--artiste">Le pont japonais Claude Monet </a></figcaption>
+                                    <figcaption>  <a href="/FR/oeuvres art/pont-japonais.html" class="carrousel__links--artiste">Le pont japonais Claude Monet </a></figcaption>
                                 </figure>
                             </div>
                             <div id="ecran-6" class="carrousel_ecran">
