--- a/FR/oeuvres art/parlement.html
+++ b/FR/oeuvres art/parlement.html
@@ -35,6 +35,7 @@
                  <h4 class="menu__title"> <a href="/FR/contact.html" class="menu__info--link"> Contact </a> </h4>
              </nav>  
         </header>
+        <div class="body__img"> 
              <figure>
                 <img src="/public/img/houses-of-parliamen-claude-monet.webp" alt="house parliament">
                 <figcaption> Le Parlement - 1904</figcaption>
@@ -44,6 +45,7 @@
                 Séries: <a href="https://www.wikiart.org/fr/claude-monet/all-works#!#filterName:Series_houses-of-parliament,resultType:masonry"> Houses of Parliament </a>
                 Genre: <a href="https://www.wikiart.org/fr/paintings-by-genre/paysage-urbain#!#filterName:all-works,viewType:masonry">paysage urbain</a>
              </p>
+       </div>
     </body>
     <nav>
         <footer class="footer__fr">
