--- a/FR/oeuvres art/parlement.html
+++ b/FR/oeuvres art/parlement.html
@@ -14,7 +14,7 @@
         <header class="header__nav">
             <div class="header__nav--items">
                <a href="/EN/index.html"> <img src="/public/img/icons/globe.svg" alt="globe" class="header__nav--language"> </a>
-               <a href="index.html"> <img src="/public/img/Icons/logo-expo.svg" alt= "logo exposition" > </a>
+               <a href="../index.html"> <img src="/public/img/Icons/logo-expo.svg" alt= "logo exposition" > </a>
                <button aria-controls="mainNav" @click="menuIs0pen = ! menuIs0pen" class="headerhomepage__btn--menu"> 
                  <img src="/public/img/Icons/menu-burger.svg" alt="menu-burger">
               </button>
