ajout et modif page oeuvre monet

--- a/FR/oeuvres art/parlement.html
+++ b/FR/oeuvres art/parlement.html
@@ -40,11 +40,9 @@
                 <img src="/public/img/houses-of-parliamen-claude-monet.webp" alt="house parliament">
                 <figcaption> Le Parlement - 1904</figcaption>
              </figure>
-             <p> 
-                Style: <a href="https://www.wikiart.org/fr/paintings-by-style/impressionism#!#filterName:all-works,viewType:masonry"> Impressionism </a>
-                Séries: <a href="https://www.wikiart.org/fr/claude-monet/all-works#!#filterName:Series_houses-of-parliament,resultType:masonry"> Houses of Parliament </a>
-                Genre: <a href="https://www.wikiart.org/fr/paintings-by-genre/paysage-urbain#!#filterName:all-works,viewType:masonry">paysage urbain</a>
-             </p>
+             <p> Style: <a href="https://www.wikiart.org/fr/paintings-by-style/impressionism#!#filterName:all-works,viewType:masonry"> Impressionism </a></p>
+             <p> Séries: <a href="https://www.wikiart.org/fr/claude-monet/all-works#!#filterName:Series_houses-of-parliament,resultType:masonry"> Houses of Parliament </a> </p>
+              <p> Genre: <a href="https://www.wikiart.org/fr/paintings-by-genre/paysage-urbain#!#filterName:all-works,viewType:masonry">paysage urbain</a></p>
        </div>
     </body>
     <nav>
