ajout page et liens

--- a/FR/index.html
+++ b/FR/index.html
@@ -50,19 +50,19 @@
                             <div id="ecran-1" class="carrousel_ecran">
                                 <figure>
                                     <img src="/public/img/in-a-japanese-garden-1901-lila-cabot-perry.webp" alt="in-a-japanese-garden-1901-lila-cabot-perry">
-                                    <figcaption> <a href="#" class="carrousel__links--artiste"> Dans un jardin japonais - Lila Cabot Perry</a></figcaption>
+                                    <figcaption> <a href="/FR/oeuvres art/jardin-japonais.html" class="carrousel__links--artiste"> Dans un jardin japonais - Lila Cabot Perry</a></figcaption>
                                 </figure>
                             </div>
                             <div id="ecran-2" class="carrousel_ecran">
                                 <figure>
                                     <img src="/public/img/the-goose-berthe-morisot.webp" alt="the-goose-berthe-morisot">
-                                    <figcaption> <a href="#" class="carrousel__links--artiste"> L'oie - Berthe Morisot </a> </figcaption>
+                                    <figcaption> <a href="/FR/oeuvres art/oie.html" class="carrousel__links--artiste"> L'oie - Berthe Morisot </a> </figcaption>
                                 </figure>
                             </div>
                             <div id="ecran-3" class="carrousel_ecran">
                                 <figure>
                                     <img src="/public/img/dans-un-bateau-lila-cabot-perry-1907.webp" alt="dans-un-bateau-in-a-boat-1907">
-                                    <figcaption> <a href="#" class="carrousel__links--artiste">Dans un bateau - Lila Cabot Perry </a> </figcaption>
+                                    <figcaption> <a href="/FR/oeuvres art/dans-un-bateau.html" class="carrousel__links--artiste">Dans un bateau - Lila Cabot Perry </a> </figcaption>
                                 </figure>
                             </div>
                             <div id="ecran-4" class="carrousel_ecran">
@@ -80,19 +80,19 @@
                             <div id="ecran-6" class="carrousel_ecran">
                                 <figure>
                                     <img src="/public/img/the-port-of-nice-berthe-morisot.webp" alt="the-port-of-nice-berthe-morisot">
-                                    <figcaption><a href="#" class="carrousel__links--artiste"> Le port de Nice - Berthe Morisot </a> </figcaption>
+                                    <figcaption><a href="/FR/oeuvres art/port-nice.html" class="carrousel__links--artiste"> Le port de Nice - Berthe Morisot </a> </figcaption>
                                 </figure>
                             </div>
                             <div id="ecran-7" class="carrousel_ecran">
                                 <figure>
                                     <img src="/public/img/deauville-the-harbor-1897-eugene-boudin.webp" alt="Deauville">
-                                    <figcaption> <a href="#" class="carrousel__links--artiste"> Le port de Deauville- Eugène Boudin </a> </figcaption>
+                                    <figcaption> <a href="/FR/oeuvres art/deauville-port.html" class="carrousel__links--artiste"> Le port de Deauville- Eugène Boudin </a> </figcaption>
                                 </figure>
                             </div>
                             <div id="ecran-8" class="carrousel_ecran">
                                 <figure>
                                     <img src="/public/img/trouville-black-rocks-eugene-boudin.webp" alt="trouville-black-rocks-eugene-boudin">
-                                    <figcaption> <a href="#" class="carrousel__links--artiste"> Les rochers noirs de Trouville - Eugène Boudin</a> </figcaption>
+                                    <figcaption> <a href="/FR/oeuvres art/trouville-rochers-noirs.html" class="carrousel__links--artiste"> Les rochers noirs de Trouville - Eugène Boudin</a> </figcaption>
                                 </figure>
                             </div>
                         </div>
