--- a/FR/eugene-boudin.html
+++ b/FR/eugene-boudin.html
@@ -59,7 +59,7 @@
                             <h1>Ses oeuvres présentes dans l’exposition</h1>
                                 <div class="text__btn"> 
                                     <img src="/public/img/deauville-the-harbor-1897-eugene-boudin.webp" alt="Deauville le port">
-                                    <a href="#" class="body__btn"> En savoir plus</a>
+                                    <a href="" class="body__btn"> En savoir plus</a>
                                 </div>
                                 <div class="text__btn"> 
                                 <img src="/public/img/trouville-black-rocks-eugene-boudin.webp" alt="les rochers noirs">
