ajout lien oeuvre art sur page artistes

--- a/FR/berthe-morisot.html
+++ b/FR/berthe-morisot.html
@@ -61,9 +61,9 @@
                     <div class="body__lign--brownright"></div>
                             <h1>Ses oeuvres présentes dans l’exposition</h1>
                                 <img src="/public/img/the-goose-berthe-morisot.webp" alt="dans-un-bateau-in-a-boat-1907">
-                                <a href="#" class="body__btn"> En savoir plus</a>
+                                <a href="/FR/oeuvres art/oie.html" class="body__btn"> En savoir plus</a>
                                 <img src="/public/img/the-port-of-nice-berthe-morisot.webp" alt="in-a-japanese-garden-1901-lila-cabot-perry">
-                                <a href="#" class="body__btn"> En savoir plus</a>
+                                <a href="/FR/oeuvres art/port-nice.html" class="body__btn"> En savoir plus</a>
                     <div class="body__lign--blueleft"></div>
                 </div>
      </div>
