--- a/FR/eugene-boudin.html
+++ b/FR/eugene-boudin.html
@@ -59,11 +59,11 @@
                             <h1>Ses oeuvres présentes dans l’exposition</h1>
                                 <div class="text__btn"> 
                                     <img src="/public/img/deauville-the-harbor-1897-eugene-boudin.webp" alt="Deauville le port">
-                                    <a href="" class="body__btn"> En savoir plus</a>
+                                    <a href="/FR/oeuvres art/deauville-port.html" class="body__btn"> En savoir plus</a>
                                 </div>
                                 <div class="text__btn"> 
                                 <img src="/public/img/trouville-black-rocks-eugene-boudin.webp" alt="les rochers noirs">
-                                    <a href="#" class="body__btn"> En savoir plus</a>
+                                    <a href="/FR/oeuvres art/trouville-rochers-noirs.html" class="body__btn"> En savoir plus</a>
                                  </div>
                     <div class="body__lign--blueleft" ></div>
                 </div>
