--- a/FR/lila-cabot-parry.html
+++ b/FR/lila-cabot-parry.html
@@ -59,9 +59,9 @@
                     <div class="body__lign--brownleft"></div>
                             <h1>Ses oeuvres présentes dans l’exposition</h1>
                                 <img src="/public/img/dans-un-bateau-lila-cabot-perry-1907.webp" alt="dans-un-bateau-in-a-boat-1907">
-                                <a href="#" class="body__btn"> En savoir plus</a>
+                                <a href="/FR/oeuvres art/dans-un-bateau.html" class="body__btn"> En savoir plus</a>
                                 <img src="/public/img/in-a-japanese-garden-1901-lila-cabot-perry.webp" alt="in-a-japanese-garden-1901-lila-cabot-perry">
-                                <a href="#" class="body__btn"> En savoir plus</a>
+                                <a href="/FR/oeuvres art/jardin-japonais.html" class="body__btn"> En savoir plus</a>
                     <div class="body__lign--greenright" ></div>
                 </div>
      </div>
