--- a/FR/info-impressionisme.html
+++ b/FR/info-impressionisme.html
@@ -51,6 +51,10 @@
                  L'impressionnisme eut une grande influence sur l'art de cette époque, la peinture bien sûr, mais aussi les arts visuels (sculpture, photographie impressionniste
                  dont le pictorialisme est le relais, cinéma impressionniste), la littérature et la musique.
              </p>
+             <blockquote>
+                <p> “Un matin, l'un de de nous manquant de noir, se servit de bleu : l'impressionnisme était né.”</p>
+                <p> Pierre Auguste Renoir</p>
+             </blockquote>
             </div>
             <div class="body__lign--blueleft"></div>
             <h2> Artistes présents dans notre exposition</h2>
