ajout frise page info impressionisme

--- a/FR/info-impressionisme.html
+++ b/FR/info-impressionisme.html
@@ -61,40 +61,34 @@
             <div class="body__lign--brownright"></div>
             <p>Pour en savoir plus sur les artistes,cliquez sur leur noms !</p>
             <div class="body__freize"> 
-                <div class="freize__graphism"> 
-                    <div class="freize__line"> </div>
-                    <div class="freize__dot"> </div>
-                    <div class="freize__line"> </div>
-                    <div class=" freize__dot"> </div>
-                    <div class="freize__line"> </div>
-                    <div class="freize__dot"> </div>
-                    <div class="freize__line"> </div>
-                    <div class="freize__dot"> </div>
+                <div class="freize__container"> 
+                    <img src="/public/img/Frise.webp">     
                 </div>
              <div class="freize__card"> 
-                    <figure>
+                <div class="main__freiz--elements"> </div>
+                    <figure >
                         <a> <img src="/public/img/eugene-boudin.webp" alt="eugène boudin"> </a>
                         <figcaption> <a href="/FR/eugene-boudin.html"> Eugène Boudin </a></figcaption>
                     </figure>
                      <p> 1824 - 1926</p>
-             </div>
+             
 
-                <figure> 
-                    <a> <img src="/public/img/claude-monet-1899.webp" alt="claude monet"> </a>
-                    <figcaption> <a href="/FR/claude-monet.html"> Claude Monet</a></figcaption>
-                </figure>
-                <p>1824 - 1926 </p>
-                <figure>
-                    <a> <img src="/public/img/berthe-morisot.webp" alt="berthe-morisot"> </a>
-                    <figcaption> <a href="/FR/berthe-morisot.html"> Berthe Morisot </a></figcaption>
-                </figure>
-                <p>1841 - 1895 </p>
-                <figure> 
-                 <a> <img src="/public/img/lila-cabot-perry-1892.webp" alt="lila-cabot-parry"> </a>
-                 <figcaption> <a href="/FR/berthe-morisot.html"> Lila Cabot Parry </a></figcaption>
-                </figure>
-                <p>1848 - 1933</p>
-           </div>
+                    <figure> 
+                        <a> <img src="/public/img/claude-monet-1899.webp" alt="claude monet"> </a>
+                        <figcaption> <a href="/FR/claude-monet.html"> Claude Monet</a></figcaption>
+                    </figure>
+                    <p>1824 - 1926 </p>
+                    <figure>
+                        a> <img src="/public/img/berthe-morisot.webp" alt="berthe-morisot"> </a>
+                        <figcaption> <a href="/FR/berthe-morisot.html"> Berthe Morisot </a></figcaption>
+                     </figure>
+                        <p>1841 - 1895 </p>
+                        <figure> 
+                        <a> <img src="/public/img/lila-cabot-perry-1892.webp" alt="lila-cabot-parry"> </a>
+                        <figcaption> <a href="/FR/berthe-morisot.html"> Lila Cabot Parry </a></figcaption>
+                    </figure>
+                    <p>1848 - 1933</p>
+             </div>
        </div>
     
       <nav>
