--- a/FR/info-impressionisme.html
+++ b/FR/info-impressionisme.html
@@ -65,7 +65,7 @@
                     <img src="/public/img/Frise.webp">     
                 </div>
              <div class="freize__card"> 
-                <div class="main__freiz--elements"> </div>
+                <div class="main__freiz--elements"> 
                     <figure >
                         <a> <img src="/public/img/eugene-boudin.webp" alt="eugène boudin"> </a>
                         <figcaption> <a href="/FR/eugene-boudin.html"> Eugène Boudin </a></figcaption>
